# owo

./: .gitignore  CHANGELOG.md  LICENSE  owo.cabal  readme.md
app/: Converter.hs  Main.hs
