cabal-version:      2.4
name:               owo
version:            1.1.0

-- A short (one-line) description of the package.
synopsis: Owofy some text

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
author: yaxley peaks

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer: epiclycoolgaemer@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable owo
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Converter

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base,
        optparse-applicative,
    hs-source-dirs:   app
    default-language: Haskell2010
